<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QrAttendance</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">用户登陆</string>
    <string name="register_title">用户注册</string>
    <string name="user_edit_hint">用户手机</string>
    <string name="pwd_edit_hint">密码</string>
    <string name="login_edit">登陆</string>
    <string name="register_edit">注册</string>
    <string name="register">我要注册</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_register_edit_hint">工号</string>
    <string name="user_register_edit_uname">姓名</string>
    <string name="user_register_edit_uphone">手机</string>
    <string name="register_pwd_edit_hint_sure">确认密码</string>
    <string name="title_activity_seacher">SeacherActivity</string>
    <!--日历-->
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">选择 %1$s 和 %2$s之间.</string>
    <string name="month_name_format">MMMM yyyy</string>

</resources>
