<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/head_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/activity_login_txt" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/head_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/user_edit_hint"
            android:background="@null"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/pwd_edit_hint"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/login_btn_normal">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_edit"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/under"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="@dimen/activity_login_edit_top">


        <TextView
            android:id="@+id/center_line"
            android:layout_width="2dp"
            android:layout_height="22dp"
            android:layout_centerInParent="true"
            android:background="@color/login_title_color" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/center_margin"
            android:layout_toLeftOf="@+id/center_line"
            android:text="@string/register"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />

        <TextView
            android:id="@+id/forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/center_margin"
            android:layout_toRightOf="@+id/center_line"
            android:text="@string/forget_psw"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>
</RelativeLayout>
