<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/head_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_register_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:background="@null"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/activity_login_txt" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/head_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/register_edit_gonghao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:hint="@string/user_register_edit_hint"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/register_edit_uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/user_register_edit_uname"
            android:background="@null"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/uphone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/uname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/register_edit_uphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/user_register_edit_uphone"
            android:inputType="phone"
            android:background="@null"
            android:maxLength="11"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/uphone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/register_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/pwd_edit_hint"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwd_sure"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/activity_login_edit_height"
        android:layout_below="@+id/pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/btn_bg">

        <EditText
            android:id="@+id/register_edit_pwd_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/register_pwd_edit_hint_sure"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/pwd_sure"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_login_edit_top"
        android:background="@drawable/login_btn_normal">

        <TextView
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_edit"
            android:background="@null"
            android:textColor="@color/login_title_color"
            android:textSize="@dimen/activity_login_edit_txt_size" />
    </RelativeLayout>


</RelativeLayout>
